syntax = "proto3";

package auth;
option go_package = "./auth";

// 登录请求
message LoginRequest {
  string username = 1;
  string password = 2;
}

// 登录响应
message LoginResponse {
  uint64 userId = 1;
  string username = 2;
}

// 用户信息请求
message UserInfoRequest {
  uint64 userId = 1;
}

// 用户信息响应
message UserInfoResponse {
  uint64 userId = 1;
  string username = 2;
  string nickname = 3;
}

service Auth {
  // 验证登录
  rpc Login(LoginRequest) returns (LoginResponse);
  // 获取用户信息
  rpc GetUserInfo(UserInfoRequest) returns (UserInfoResponse);
}